<resources>
    <string name="app_name">HZGK音乐</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_search">搜索</string>
    <string name="action_settings">Settings</string>

    <string name="permission_title">权限申请</string>
    <string name="permission_rationale">音乐使用存储空间权限读取媒体库信息\n请在设置-应用-音乐-权限中开启存储空间权限，以正常读取媒体库信息</string>

    <string name="action_toSettings">去设置</string>
    <string name="action_cancel">取消</string>

    <string name="menu_home">主页</string>
    <string name="menu_play_queue">播放队列</string>
    <string name="menu_play_list">播放列表</string>
    <string name="menu_folder">文件夹</string>
    <string name="menu_settings">设定</string>
    <string name="menu_help">帮助</string>
</resources>
